<resources>
    <string name="app_name">Sağlıklı Yaşama Merhaba !</string>
    <string name="email_giris">E-mailinizi Girin</string>
    <string name="sifre_giris">Şifrenizi Girin</string>
    <string name="kayit_olma">Henüz Kayıtlı Değilim, Kayıt Ol!</string>
    <string name="giris">Giriş</string>
    <string name="email_giris1">E-mailinizi Girin</string>
    <string name="sifre_giris1">Şifrenizi Girin</string>
    <string name="tekrar_sifre">Tekrar Şifrenizi Girin</string>
    <string name="kayit_ol">Kayıt Ol</string>
    <string name="kayitliyim">Zaten Kayıtlıyım, Oturum Aç!</string>
    <string name="anasayfa">Anasayfa</string>
    <string name="kisisel_veriler">Kişisel Veriler</string>
    <string name="egzersiz">Egzersiz</string>
    <string name="saglıklı_yasam">Sağlıklı Yaşam Bilgileri</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Egzersiz">Egzersiz</string>
    <string name="saglıklı_yasam_bilgileri">Sağlıklı Yaşam Bilgileri</string>
    <string name="kisisel_bilgiler">Kişisel Bilgiler</string>
    <string name="home">Anasayfa</string>
    <string name="egzersizler">Egzersizler !</string>
    <string name="anasayfaya_hosgeldiniz">Anasayfaya Hoşgeldiniz !</string>
    <string name="barfiks">Barfiks</string>
    <string name="mekik">Mekik</string>
    <string name="plank">Plank</string>
    <string name="sinav">Şınav</string>
    <string name="squat">Squat</string>
    <string name="kosu">Koşu</string>
    <string name="saglikliyasamfragmentbilgigecici">Sağlıklı Yaşama Dair Bütün Bilgiler Burada !</string>
    <string name="alkolzarar">Alkolün Zararları</string>
    <string name="dengeli_beslenme">Dengeli Beslenme</string>
    <string name="sebzevemeyveyemeninfaydalar">SebzeVeMeyveYemeninFaydaları</string>
    <string name="sigaranin_zararlari">Sigaranın Zararları</string>
    <string name="bisiklet_surmenin_faydalari">Bisiklet Sürmenin Faydaları</string>
    <string name="uyku_duzensizligi">Uyku Düzensizliği</string>
    <string name="abprep">AB-PREP</string>
    <string name="kopru">Köprü</string>
    <string name="kafein">kafein</string>
    <string name="su">su</string>
    <string name="texti">VKI = Vücut Ağırlığı (kg) / Boy uzunluğu (m) x Boy uzunluğu (m)</string>
    <string name="textii">Vücut kitle indeksi (VKİ), vücut kütlesinin (kg), uzunluğunun metre cinsinden karesine bölünmesiyle hesaplanır.İdeal ağırlık ise ulaşılmak istenen VKİ\'nin, boy uzunluğunun karesi ile çarpılmasıyla elde edilir. Örnek olarak İdeal Kilo = 24 × (1,60 x 1,60)= 61,4 kg VKI, kişinin sağlıklı kiloda olup olmadığının bir göstergesidir.</string>
    <string name="textiii">Sağlıklı kilo oranına , obezite riski taşımamıza ,diyet ve egzersiz programlarının etkisini görmemizi sağlar bu sayede uzun vadeli sağlık problemlerini önleyebiliriz. Ancak, vki sadece bir göstergedir ve sağlıklı kilo için tek bir gösterge olarak kullanılmamalıdır. Özellikle kas oranı yüksek olan kişiler için vki , sağlıklı kilo düzeylerini yanıltabilir. Bu nedenle, VKI\'nin yanı sıra diğer sağlık parametreleri de dikkate alınmalıdır.</string>
    <string name="siniflandirma">Sınıflandırma</string>
    <string name="idealoran">İdeal Oran</string>
    <string name="sinavyazi">Şınav çekmek kolları, bacakları ve orta gövdeniz dahil tüm vücudunuzu çalıştırır. Şınav egzersizi omuz, göğüs, sırt, kanat, ön kol (biceps) ve arka kol (triceps) kaslarını aktif olarak çalıştırırken, dolaylı olarak bacak, kalça ve karın kaslarını çalıştırır.7</string>
    <string name="kosuyazi">Koşmak, sağlıklı bir yaşam tarzının önemli bir parçasıdır. Koşmanın birçok faydası vardır ;Yağ yakma, Kan şekerini dengeleme, depresyon ve stresi azaltma, kemik sağlığını iyileştirme, Postürü iyileştirme ve kardiyovasküler sağlığı iyileştirme gibi faydaları olan hayatımızın önemli bir parçasıdır.</string>
    <string name="kopruyazi">Köprü hareketi, aynı zamanda glute köprüsü olarak da bilinir, glute, hamstring ve core kasları hedeflemek için mükemmel bir egzersizdir. Bu egzersiz, pozisyonu, dengeyi ve istikrarı iyileştirmek için yardımcı olabilir ve aynı zamanda bel ağrısını azaltmak için de faydalı olabilir.</string>
    <string name="abprepyazi">AB-Prep hareketi, aynı zamanda abdominal hazırlık egzersizi olarak da bilinir, karın kaslarını hedeflemek için harika bir egzersizdir. Transvers abdominal kaslarını ve oblikleri aktive eder, bu da genel karın stabilitesi ve gücünü arttırır.</string>
    <string name="squatyazi">Squat yapmak, bacaklarınızı, gluteus ve karın kaslarınızı tonlamak ve güçlendirmek için mükemmel bir egzersizdir. Squat yapmak, bacaklarınızın ve gluteus kaslarınızın güçlenmesine ve tonlamasına yardımcı olur.</string>
    <string name="plankyazi">Plank hareketinin ana faydaları arasında karın gücünün ve stabilitesinin iyileştirilmesi yer alır. Bu, daha iyi bir postür ve daha az bel ağrısı riskiyle sonuçlanabilir. Güçlü bir karın, diğer egzersizler ve günlük aktiviteler sırasında dengeyi ve stabiliteyi arttırmada da yardımcı olur.</string>
    <string name="mekikyazi">Mekik hareketi, vücudun çeşitli bölgelerini çalıştıran, özellikle bacak ve karın kaslarını güçlendiren bir egzersizdir. Bu nedenle, sağlıklı bir vücut için önemli bir egzersizdir. Ayrıca yağ yakma , esneklik artışı ve metabolizmayı hızlandırma gibi faydaları vardır.</string>
    <string name="barfiksyazi">Barfiks hareketi, vücudun üst kısmını çalıştıran, özellikle göğüs, triceps, omuz ve sırt kaslarını güçlendiren bir egzersizdir. Bu nedenle, sağlıklı bir vücut için önemli bir egzersizdir.Yağ yakma ,metabolizmayı hızlandırma ve Postürü düzeltme gibi faydaları vardır.</string>
    <string name="alkolbilgi">Alkol, uzun vadeli kullanımda kalp ve damar hastalıkları, kanser, maksimum sağlık sorunları, nörolojik sorunlar, kişilik değişiklikleri, bağımlılık, acil sağlık sorunları ve sosyal problemler gibi birçok sağlık sorununa neden olabilir. Fazla miktarda alkol kullanımı bu zararları arttırır.</string>
    <string name="dengelibeslenmebilgi">Dengeli beslenme, vücut ağırlığını kontrol etmek, sağlıklı bir kilo elde etmek, vücudun ihtiyaç duyduğu tüm besin maddelerini almak, kronik hastalıklara yakalanma riskini azaltmak ve genel sağlık ve iyi hissetmek için önemlidir.</string>
    <string name="sigarazararbilgi">Sigara içmek, kalp ve damar hastalıkları, kanser, diğer solunum hastalıkları, cilt ve diş sağlığı sorunları, üreme sağlığı sorunları ve diğer sağlık sorunlarına yol açar. Sigara içmek ayrıca, içicinin çevresindeki insanlar için de zararlıdır, özellikle pasif içiciler için solunum sorunlarına yol açabilir. Sigara içmek, ölüm riskini artırmaktadır.</string>
    <string name="uykudüzensizliğibilgi">Uyku düzensizliği, düzenli olarak uyku kalitesi ve miktarının bozulmasına neden olabilir. Uzun dönemde, sağlık sorunlarına neden olabilir; kalp sağlığı, depresyon, anksiyete, vücut ağırlığı, hafıza ,dikkat problemleri , böbrek rahatsızlıkları, bağışıklık sistemi zayıflığı gibi sorunlara yol açar.</string>
    <string name="bisikletfaydabilgi">Bisiklet sürmek, kardiyovasküler sağlık, kas ve kemik sağlığı, vücut ağırlığı kontrolü, solunum sistemi güçlendirmesi, stres ve depresyon azaltması gibi faydaları olan önemli bir egzersiz türüdür. Aynı zamanda çevre dostudur ve trafikte geçen zamanı azaltır.</string>
    <string name="sufaydasıbilgi">Suyun içilmesi, vücudun sıvı dengesini korur, metabolizmayı hızlandırır, atık maddeleri atar ve vücut ısısını dengede tutar. Su içmek ayrıca, sindirim sistemini düzenler, cildi sağlıklı görünmesini sağlar, kilo vermenin bir parçası olabilir ve toksinlerin atılmasını kolaylaştırır.</string>
    <string name="sebzemeyvefaydabilgi">Sebze ve meyve tüketimi, vücutta antioksidanlar, vitaminler, mineral ve diğer besin maddelerini sağlar. Bu maddeler, kansere karşı koruma sağlar, kalp sağlığını korur, bağışıklık sistemini güçlendirir ve bağırsak sağlığını iyileştirir. Aynı zamanda, sebze ve meyveler düşük kalorili ve yüksek lif içeriğine sahip olduğu için, kilo kontrolüne de yardımcı olur.</string>
    <string name="kafeinbilgi">Kafein, enerji ve uyarılmayı arttıran bir madde olduğu için gün içi performansı arttırmak ve uyku sorunlarını önlemek için kullanılabilir. Ancak, aşırı alım hiperaktivite, uyku bozuklukları, gerginlik, anksiyete ve hatta kalp ritmi bozukluklarına neden olabilir. Özet olarak, düzenli olarak alınması faydalı olabilir ancak aşırı alım zararlı olabilir.</string>
    <string name="textşansdileme">Çok İyi Birşey Çıkacağına Eminim :)</string>
    <string name="rastgelebutonu">Senin İçin Rastgele Bir Aktivite</string>
    <string name="sihirbazin_marifeti">sihirbazın marifeti</string>
    <string name="rastgele_aktivite">Rastgele Aktivite</string>
    <string name="bilgiler">Bilgiler</string>
    <string name="egzersizlernav">Egzersizler</string>
    <string name="anasayfanav">Anasayfa</string>
    <string name="hesapla">Hesapla</string>
    <string name="kilonuzu_giriniz">Kilonuzu Giriniz</string>
    <string name="sonu">Sonuç:</string>
    <string name="boyunuzu_giriniz">Boyunuzu Giriniz</string>
    <string name="step_counter_text_view">0</string>
    <string name="adiminiz">Adımınız</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>