<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sporFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bottom_nav_background"
        android:backgroundTint="@color/bottom_nav_background"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bottom_nav_background"
            android:backgroundTint="@color/bottom_nav_background"
            android:backgroundTintMode="screen">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/kosu"
                android:src="@drawable/kosu" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="200dp"
                android:layout_gravity="center|end"
                android:background="@color/bottom_nav_background"
                android:backgroundTint="@color/fragment_bg_color"
                android:text="@string/kosuyazi"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/sinav"
                android:src="@drawable/sinav"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="200dp"
                android:layout_gravity="center|end"
                android:background="@color/bottom_nav_background"
                android:backgroundTint="@color/fragment_bg_color"
                android:text="@string/sinavyazi"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal|bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/kopru"
                android:src="@drawable/bridge"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="200dp"
                android:layout_gravity="center|end"
                android:background="@color/bottom_nav_background"
                android:backgroundTint="@color/fragment_bg_color"
                android:text="@string/kopruyazi"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/abprep"
                android:src="@drawable/abprep"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="201dp"
                android:layout_gravity="center|end"
                android:background="@color/bottom_nav_background"
                android:backgroundTint="@color/fragment_bg_color"
                android:text="@string/abprepyazi"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/squat"
                android:src="@drawable/squat"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="201dp"
                android:layout_gravity="center|end"
                android:background="@color/bottom_nav_background"
                android:backgroundTint="@color/fragment_bg_color"
                android:text="@string/squatyazi"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/plank"
                android:src="@drawable/plank"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="200dp"
                android:layout_gravity="center|end"
                android:background="@color/bottom_nav_background"
                android:backgroundTint="@color/fragment_bg_color"
                android:text="@string/plankyazi"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/mekik"
                android:src="@drawable/mekik"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="200dp"
                android:layout_gravity="center|end"
                android:background="@color/bottom_nav_background"
                android:backgroundTint="@color/fragment_bg_color"
                android:text="@string/mekikyazi"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/barfiks"
                android:src="@drawable/barfiks" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="200dp"
                android:layout_gravity="center|end"
                android:background="@color/bottom_nav_background"
                android:backgroundTint="@color/fragment_bg_color"
                android:text="@string/barfiksyazi"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>