<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg_color"
    tools:context=".anasayfaFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DFCF41"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/idealoran"
                android:src="@drawable/vkii"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="268dp"
                android:layout_height="198dp"
                android:layout_gravity="center|end"
                android:background="@color/fragment_bg_color"
                android:backgroundTint="@color/bottom_nav_background"
                android:backgroundTintMode="screen"
                android:text="@string/textii"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="293dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/siniflandirma"
                android:src="@drawable/vki" />

            <TextView
                android:layout_width="102dp"
                android:layout_height="198dp"
                android:layout_gravity="center|end"
                android:background="@color/fragment_bg_color"
                android:backgroundTint="@color/bottom_nav_background"
                android:backgroundTintMode="screen"
                android:text="@string/texti"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="164dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/fragment_bg_color"
                android:backgroundTint="@color/bottom_nav_background"
                android:backgroundTintMode="screen"
                android:text="@string/textiii"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <Button
                android:layout_gravity="center|end"
                android:id="@+id/btnCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hesapla" />

            <EditText
                android:id="@+id/etWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center|end"
                android:hint="@string/kilonuzu_giriniz"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                tools:ignore="DuplicateClickableBoundsCheck" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:layout_gravity="bottom|center|end"
                android:text="@string/sonu"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:hint="@string/boyunuzu_giriniz"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>