<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".kbilgilerFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="369dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="@string/textşansdileme"
            android:textColor="#827717"
            android:textSize="48sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_gravity="bottom|center"
            android:backgroundTint="#000000"
            android:text="@string/rastgelebutonu" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sihirbazin_marifeti"
        android:src="@drawable/hat" />

</LinearLayout>