<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bilgiFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/alkolzarar"
                android:src="@drawable/bilgialkolzarar"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="198dp"
                android:layout_gravity="center|end"
                android:text="Alkol"
                android:textColor="@color/purple_700"
                android:textSize="23sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/dengeli_beslenme"
                android:src="@drawable/bilgidengelibeslenme"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="200dp"
                android:layout_gravity="center|end"
                android:text="This Is Vertical ScrollView"
                android:textColor="@color/purple_700"
                android:textSize="23sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/sebzevemeyveyemeninfaydalar"
                android:src="@drawable/bilgisebze"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="201dp"
                android:layout_gravity="center|end"
                android:text="This Is Vertical ScrollView"
                android:textColor="@color/purple_700"
                android:textSize="23sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="150dp"
                android:layout_height="201dp"
                android:contentDescription="@string/sigaranin_zararlari"
                android:src="@drawable/bilgisigarazarar"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="203dp"
                android:layout_gravity="center|end"
                android:text="This Is Vertical ScrollView"
                android:textColor="@color/purple_700"
                android:textSize="23sp"
                android:textStyle="bold"
                tools:ignore="InOrMmUsage" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/uyku_duzensizligi"
                android:src="@drawable/uykuduzensizligi"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="199dp"
                android:layout_gravity="center|end"
                android:text="This Is Vertical ScrollView"
                android:textColor="@color/purple_700"
                android:textSize="23sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/bisiklet_surmenin_faydalari"
                android:src="@drawable/bisikletinfaydasi"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="200dp"
                android:layout_gravity="center|end"
                android:text="This Is Vertical ScrollView"
                android:textColor="@color/purple_700"
                android:textSize="23sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/su"
                android:src="@drawable/su" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="201dp"
                android:layout_gravity="center|end"
                android:text="This Is Vertical ScrollView"
                android:textColor="@color/purple_700"
                android:textSize="23sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:contentDescription="@string/kafein"
                android:src="@drawable/kafein" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="202dp"
                android:layout_gravity="center|end"
                android:text="This Is Vertical ScrollView"
                android:textColor="@color/purple_700"
                android:textSize="23sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>